--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
